[package]
name = "chainproof"
version = "0.1.0"
edition = "2021"
description = "CI-native supply-chain integrity monitor"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.3"
anyhow = "1.0"
hmac = "0.12"
base64 = "0.21"
clap = { version = "3.2", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
which = "3.0"
